News. List, Detail, Add, Edit and Delete controllers. Создание списка новостей. Добавление, изменение и удаление.

--- a/static/main.css
+++ b/static/main.css
@@ -106,3 +106,10 @@
 #pagination #next_page {
     float: right;
 }
+.posted {
+    font-style: italic;
+    text-align: right;
+}
+.buttons {
+    text-align: right;
+}
