Image store. BBCode. AJAX. JSON. jQuery.

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,6 +29,6 @@
         {% endblock %}
     </div>
     <div id="footer">
-        <p>Что б слать всех нахуй.</p>
+        <p>Что б всех слать нахуй.</p>
     </div>
 {% endblock %}
