--- a/news/templates/new_add.html
+++ b/news/templates/new_add.html
@@ -1,7 +1,14 @@
 {% extends 'main.html' %}
 
+{% load staticfiles %}
+
 {% block title %}
     Добавление новости
+{% endblock %}
+
+{% block additional_js %}
+    <script src="{% static 'jquery.js' %}" type="text/javascript"></script>
+    <script src="{% static 'imagepool.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block main %}
@@ -12,6 +19,7 @@
             <div class="submit-button"><input type="submit" value="Добавить"></div>
         </form>
     </div>
+    {% include 'generic/file_lister.html' %}
     <p><a href="{% url 'news_index' %}">Назад</a></p>
 {% endblock %}
 
