--- a/static/main.css
+++ b/static/main.css
@@ -64,6 +64,7 @@
 .form {
     width: 400px;
     margin: 20px 0 20px 0;
+    border-collapse: collapse;
 }
 .bottom-indent {
     margin-bottom: 50px;
@@ -138,5 +139,12 @@
 }
 #imagepool_image_list td a.disabled:link, #imagepool_image_list td a.disabled:visited,
 #imagepool_image_list td a.disabled:active, #imagepool_image_list td a.disabled:hover {
+    display: none;
+}
+.form th, .form td {
+    padding: 10px;
+    border: 1px solid #cccccc;
+}
+.form th:first-child, .form td:first-child {
     display: none;
 }
