--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% load staticfiles %}
 
 {% block additional_css %}
@@ -19,7 +18,9 @@
             {% url 'guestbook' as page_url %}
             <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Гостевая</a></li>
             {% if user.is_authenticated %}
-                <li class="indented"><a href="/admin/">Админка</a></li>
+                {% url 'categories_edit' as page_url %}
+                <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Категории</a></li>
+                <li><a href="/admin/">Админка</a></li>
                 <li class="indented"><a href="{% url 'logout' %}">Выйти</a></li>
             {% endif %}
         </ul>
