Доработать GoodCreate Update Delete...

--- a/guestbook/templates/guestbook.html
+++ b/guestbook/templates/guestbook.html
@@ -26,5 +26,5 @@
             </table>
         {% endfor %}
     {% endif %}
-    {% include 'generic/paginator.html' %}
+    {% include 'generic/pagination.html' %}
 {% endblock %}
