--- a/news/templates/news_index.html
+++ b/news/templates/news_index.html
@@ -27,6 +27,6 @@
         </p>
     {% endfor %}
 
-    {% include 'generic/paginator.html' %}
+    {% include 'generic/pagination.html' %}
 
 {% endblock %}
