--- a/templates/main.html
+++ b/templates/main.html
@@ -13,10 +13,20 @@
         <ul>
             {% url 'main' as page_url %}
             <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Главная</a></li>
+
+            {% for object in categories %}
+                {% url 'goods_index' pk=object.pk as page_url %}
+                <li{% if forloop.first %} class="indented"{% endif %}>
+                    <a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>{{ object.name }}</a>
+                </li>
+            {% endfor %}
+
             {% url 'news_index' as page_url %}
-            <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Новости</a></li>
+            <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Новости</a></li>
+
             {% url 'guestbook' as page_url %}
             <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Гостевая</a></li>
+
             {% if user.is_authenticated %}
                 {% url 'categories_edit' as page_url %}
                 <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Категории</a></li>
