--- a/goods/templates/goods_index.html
+++ b/goods/templates/goods_index.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 {% load thumbnail %}
-
+{#{% load staticfiles %}#}
 
 {% block title %}
     {{ category.name }}
@@ -18,18 +18,14 @@
             <th>Миниатюра</th>
             <th><a href="?sort=0&order={% if sort == '0' and order == 'A' %}D{% else %}A{% endif %}">
                 {% if sort == '0' %}{% if order == 'D' %}&#9660;{% else %}&#9650;{% endif %}{% endif %}&nbsp;Название</a></th>
-            
             <th>Описание</th>
             <th><a href="?sort=1&order={% if sort == '1' and order == 'A' %}D{% else %}A{% endif %}">
                 {% if sort == '1' %}{% if order == 'D' %}&#9660;{% else %}&#9650;{% endif %}{% endif %}&nbsp;Цена, руб.</a></th>
-        
             <th><a href="?sort=2&order={% if sort == '2' and order == 'A' %}D{% else %}A{% endif %}">
                 {% if sort == '2' %}{% if order == 'D' %}&#9660;{% else %}&#9650;{% endif %}{% endif %}&nbsp;Есть в наличии</a></th>
-            
-            {% if perm.goods.change_good %}
+            {% if perms.goods.change_good %}
                 <th>&nbsp;</th>
             {% endif %}
-        
             {% if perms.goods.delete_good %}
                 <th>&nbsp;</th>
             {% endif %}
@@ -37,15 +33,13 @@
             
         {% for object in object_list %}
             <tr>
-
                 <td class="centered">
-                    <a href="{% url 'good_detail' pk=object.pk %}?page={{ page_obj.number }}&sort={{ sort }}&order={{ order }}">
-                        <img src="{% thumbnail object.image 'base' %}">
-                    </a>
+                    <a href="{% url 'goods_detail' pk=object.pk %}?page={{ page_obj.number }}&sort={{ sort }}&order={{ order }}">
+                        <img src="{% thumbnail object.image 'base' %}"></a>
                 </td>
 
                 <td>
-                    <a href="{% url 'goods_detail' pk=object.pk %}?page={{ page_obj.number }}&sort{{ sort }}&order{{ order }}">{{ object.name }}</a>
+                    <a href="{% url 'goods_detail' pk=object.pk %}?page={{ page_obj.number }}&sort={{ sort }}&order={{ order }}">{{ object.name }}</a>
                 </td>
 
                 <td>{{ object.description }}</td>
@@ -63,7 +57,7 @@
                 {% if perms.page.delete_good %}
                     <td class="centered"><a href="{% url 'goods_delete' pk=object.pk %}?page={{ page_obj.number }}&sort={{ sort }}&order={{ order }}">Удалить</a></td>
                 {% endif %}
-            </tr>        
+            </tr>
         {% endfor %}
     </table>
     {% include 'generic/pagination.html' %}
