--- a/main/templates/mainpage.html
+++ b/main/templates/mainpage.html
@@ -16,27 +16,20 @@
     {% endfor %}
 
     <h3>Рекомендуемые товары</h3>
-    <table class="list_table">
+    <table class="list-table">
         {% for object in goods %}
             <tr>
+                <td class="centered"><a href="{% url 'goods_detail' pk=object.pk %}"><img src="{% thumbnail object.image 'base' %}"></a></td>
 
-                <td class="centered">
-                    <a href="{% url 'goods_detail' pk=object.pk %}"><img src="{% thumbnail object.image 'base' %}"></a>
-                </td>
-
-                <td>
-                    <a href="{% url 'goods_detail' pk=object.pk %}">{{ object.name }}</a>
-                </td>
+                <td><a href="{% url 'goods_detail' pk=object.pk %}">{{ object.name }}</a></td>
 
                 <td>{{ object.description }}</td>
 
                 <td class="centered">{% if object.price_acc > 0 %}<span class="old-price">{{ object.price }}</span><br>
-                {{ object.price_acc }}{% else %}{{ object.price }}{% endif %}руб.
+                    {{ object.price_acc }}{% else %}{{ object.price }}{% endif %}руб.
                 </td>
 
-                <td class="centered">
-                    {% if object.in_stock %}В наличии{% endif %}
-                </td>
+                <td class="centered">{% if object.in_stock %}В наличии{% endif %}</td>
             </tr>
         {% endfor %}
     </table>
