--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -1,4 +1,4 @@
-{% if comments_list|length > 0 %}
+{% if comment_list|length > 0 %}
     <p>&nbsp;</p>
     {% for comment in comment_list %}
         {% if comment.is_removed %}
