Site is finished:
BLOG: BlogList. BlogDetail. BlogCreate, BlogUpdate, BlogDelete. Pagination, CSS. Access edition control.
Contacts, Howtobuy and About page.

БЛОГ: Список статей, добавление изменение и удаление. Пацинация, CSS. Разграничение доступа на редактирование записей
Страницы: Контакты, Оплата и доставка, О нас

--- a/static/main.css
+++ b/static/main.css
@@ -11,6 +11,7 @@
     float: left;
     width: 100px;
     padding: 10px;
+    min-height: 440px;
 }
 #leftmenu ul {
     margin: 0;
@@ -48,6 +49,7 @@
     margin-left: 110px;
     border-left: 1px #cccccc solid;
     padding: 10px;
+    min-height: 440px;
 }
 #main h2:first-child {
     margin: 0 0 10px 0;
@@ -196,4 +198,22 @@
 .comment-removed {
     font-weight: bold;
     font-style: italic;
+}
+.blog-article {
+    padding: 10px;
+    margin: 10px 0 10px 0;
+    border: 1px solid #cccccc;
+}
+.blog-article h4 {
+    margin-top: 0;
+}
+.username {
+    font-size: smaller;
+    font-weight: bold;
+}
+.tags {
+    text-align: right;
+}
+.search-form {
+    float: right;
 }
