--- a/templates/main.html
+++ b/templates/main.html
@@ -24,14 +24,31 @@
             {% url 'news_index' as page_url %}
             <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Новости</a></li>
 
+            {% url 'blog_index' as page_url %}
+            <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Блог</a></li>
+
             {% url 'guestbook' as page_url %}
             <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Гостевая</a></li>
+
+            {% url 'contacts' as page_url %}
+            <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Контакты</a></li>
+
+            {% url 'howtobuy' as page_url %}
+            <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Оплата</a></li>
+
+            {% url 'about' as page_url %}
+            <li><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>О нас</a></li>
 
             {% if user.is_authenticated %}
                 {% url 'categories_edit' as page_url %}
                 <li class="indented"><a href="{{ page_url }}"{% if page_url == current_url %} class="current"{% endif %}>Категории</a></li>
                 <li><a href="/admin/">Админка</a></li>
                 <li class="indented"><a href="{% url 'logout' %}">Выйти</a></li>
+            {% endif %}
+
+            {% if not user.is_authenticated %}
+                <li class="indented"><a href="{% url 'login' %}">Войти</a></li>
+
             {% endif %}
         </ul>
     </div>
