Generating RSS and Atom news feeds for products and news.
Генерирование каналов новостей RSS и Atom для товаров и новостей.

--- a/news/templates/news_index.html
+++ b/news/templates/news_index.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load staticfiles %}
 
 {% block title %}
     Новости
@@ -11,6 +12,11 @@
     {% if perms.news.add_new %}
         <p><a href="{% url 'news_add' %}">Добавить новость</a></p>
     {% endif %}
+
+    <div class="feeds">
+        <a href="{% url 'news_feed_rss' %}" target="_blank"><img src="{% static 'rss.png' %}"></a>
+        <a href="{% url 'news_feed_atom' %}" target="_blank"><img src="{% static 'atom.png' %}"></a>
+    </div>
 
     {% for object in latest %}
         <h4><a href="{% url 'news_detail' pk=object.pk %}?page={{ page_obj.number }}">{{ object.title }}</a></h4>
